rust-examples/tests/compile-fail/Rule_9_4.rs
#![deny(clippy)]
#[deny(warnings)]

#[derive(Debug)]
struct Once {
    a: i32,
}

fn main() {
    let once = Once { a: 1, a: 2 };
    println!("{:?}", once);
}
